test/log/permutation/vgather_vv_u16.txt
vgather_vv_u16.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vgather_vv_u16.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vgather_vv_u16.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vgather_vv_u16.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vgather_vv_u16.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vgather_vv_u16.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vgather_vv_u16.c:22:6: warning: no previous prototype for 'vgather_vv_u16_golden' [-Wmissing-prototypes]
   22 | void vgather_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vgather_vv_u16.c: In function 'vgather_vv_u16_golden':
vgather_vv_u16.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vgather_vv_u16.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vgather_vv_u16.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vgather_vv_u16.c:22:38: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vgather_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                            ~~~~~~~~~~^
vgather_vv_u16.c:22:50: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vgather_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                        ~~~~~~~~~~^
vgather_vv_u16.c:22:62: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vgather_vv_u16_golden(uint16_t *a,uint16_t *b,uint16_t *exp_result) {
      |                                                    ~~~~~~~~~~^~~~~~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgather_vv_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vgather_vv_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vgather_vv_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgather_vv_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed